fixed border not dissappearing on small screen

--- a/src/v3/src/components/AuthContainer/style.css
+++ b/src/v3/src/components/AuthContainer/style.css
@@ -12,6 +12,6 @@
 /* TODO: this max width may chaged, will discuss w/ UX */
 @media screen and (max-width: 391px) {
   .siwContainer {
-    border: none;
+    border: none !important;
   }
 }
